tui/tests/snapshots/notebook_tree__move_mode_cancelled_note.snap
---
source: tui/tests/notebook_tree.rs
assertion_line: 98
expression: text
snapshot_kind: text
---
 Note 'Sample Note' selected                                                                           [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues!                                                       
   󱇗 Sample Note                            ▐ 2                                                                         
                                            ▐ 3 Press `?` to see keymaps and shortcuts.                                 
                                            ▐ 4 Press `m` in the note tree to create notes or directories.              
                                            ▐ 5 Press `Enter` on a note to open it and start writing.                   
                                            ▐ 6                                                                         
                                            ▐ 7 GitHub: https://github.com/gluesql/glues                                
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
